BA   68- new GP functions hyperellratpoints and ellratpoints based on
         Michael Stoll ratpoints code.
     69- [libpari] Z_pollardbrent, Z_ECM
     70- [libpari] RgX_mulhigh_i
     71- GP function znchargauss
     72- Configure --graphic=svg
     73- GP function divisorslenstra (divisors in residue classes)
     74- [libpari] lg_increase, vecfactoru, vecfactoru_i, vecfactoroddu,
         vecfactoroddu_i
BA   75- ellheight for curves over number fields
     76- new GP function forfactored
     77- [libpari] ZV_sort_inplace
BA   78- ellrootno for curves over number fields
     79- optional flag to 'divisors' (add factorization)
     80- GP functions fordivfactored
BA   81- [libpari] ZXQM_mul, ZXQM_sqr, QXQM_mul, QXQM_sqr
     82- [libpari] ZX_z_unscale
     83- [libpari] Flxn_mul
BA   84- [libpari] FlxqX_is_squarefree, FlxqX_nbfact, RgX_to_FlxqX
     85- [libpari] RgX_addmulXn, RgX_addmulXn_shallow, RgX_addspec,
         RgX_addspec_shallow
BA   86- GP functions galoischardet, galoischarpoly
     87- [libpari] mulcxpowIs
BA   88- [libpari] function RgXn_sqrt
KB+HC89- new package 'mf' for modular forms; new GP functions
      getcache         lfunmf          mfDelta           mfEH
      mfEk             mfTheta         mfatkin           mfatkineigenvalues
      mfatkininit      mfbasis         mfbd              mfbracket
      mfcoef           mfcoefs         mfconductor       mfcosets
      mfcuspisregular  mfcusps         mfcuspval         mfcuspwidth
      mfderiv          mfderivE2       mfdescribe        mfdim
      mfdiv            mfeigenbasis    mfeigensearch     mfeisenstein
      mfembed          mfeval          mffields          mffromell
      mffrometaquo     mffromlfun      mffromqf          mfgaloistype
      mfhecke          mfheckemat      mfinit            mfisCM
      mfisequal        mfkohnenbasis   mfkohnenbijection mfkohneneigenbasis
      mflinear         mfmanin         mfmul             mfnumcusps