@@ -121,4 +121,20 @@
 [1, matrix(0,2)]
 [2, Mat([2, 1])]
 [0, Mat([0, 1])]
-Total time spent: 1437
+[100001, [11, 1; 9091, 1]]
+[100002, [2, 1; 3, 1; 7, 1; 2381, 1]]
+[100003, Mat([100003, 1])]
+[100005, [3, 1; 5, 1; 59, 1; 113, 1]]
+[100006, [2, 1; 31, 1; 1613, 1]]
+[100007, [97, 1; 1031, 1]]
+[100010, [2, 1; 5, 1; 73, 1; 137, 1]]
+[-100010, [-1, 1; 2, 1; 5, 1; 73, 1; 137, 1]]
+[-100007, [-1, 1; 97, 1; 1031, 1]]
+[-100006, [-1, 1; 2, 1; 31, 1; 1613, 1]]
+[-100005, [-1, 1; 3, 1; 5, 1; 59, 1; 113, 1]]
+[-100003, [-1, 1; 100003, 1]]
+[-100002, [-1, 1; 2, 1; 3, 1; 7, 1; 2381, 1]]
+[-100001, [-1, 1; 11, 1; 9091, 1]]
+607926
+607926
+Total time spent: 5587
